# rtgn

./: CMakeLists.txt  README  tags
examples/top_down_shooter/: CMakeLists.txt  client.c  client_ctx.c  client_ctx.h  config.h  game_state.c  game_state.h  server.c  window_event_handler.c  window_event_handler.h
include/rtgn/: client.h  common_types.h  config.h  game_state.h  network_address.h  server.h  temp.h  tick_clock.h
src/: client.c  client_packet_handle.c  client_packet_handle.h  network_address.c  packet.h  server.c  server_packet_handle.c  server_packet_handle.h  socket.c  socket.h  temp.c  tick_clock.c  utils.c  utils.h
test/: CMakeLists.txt  runner.c  tests.h
test/tests/: include.h  test_temp.c
